src/objects/skuid__Component_Pack__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>skuid__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Builder_Definition_File__c</fullName>
        <defaultValue>&quot;skuid_builders.json&quot;</defaultValue>
        <label>Builder Definition File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Cache_Package_Definition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cache Package Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Load_Order__c</fullName>
        <label>Load Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Cache01__c</fullName>
        <label>Package Cache01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Cache02__c</fullName>
        <label>Package Cache02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Cache03__c</fullName>
        <label>Package Cache03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Namespace__c</fullName>
        <label>Resource Namespace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Runtime_Definition_File__c</fullName>
        <defaultValue>&quot;skuid_runtime.json&quot;</defaultValue>
        <label>Runtime Definition File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Type__c</fullName>
        <description>Desktop, Mobile, or Any</description>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Component Pack</label>
</CustomObject>